--- a/app/src/main/res/layout/activity_add_trip.xml
+++ b/app/src/main/res/layout/activity_add_trip.xml
@@ -1,23 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
+    tools:context=".SignUp">
 
-    tools:context=".SignUp"
-    android:orientation="vertical">
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="279dp"
+        android:text="Add Trip"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5">
 
         <Spinner
             android:id="@+id/spinner_From"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="10dp"
+            android:background="@drawable/sh_text_rad"
             android:entries="@array/Destination"
-
+            android:popupBackground="@color/purple_700"
             android:scrollbarStyle="insideInset"
             android:splitMotionEvents="true"/>
 
@@ -28,8 +50,9 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="10dp"
-
+            android:background="@drawable/sh_text_rad"
             android:entries="@array/Destination"
+            android:popupBackground="@color/purple_700"
             android:scrollbarStyle="insideInset"
             android:splitMotionEvents="true" />
         <Spinner
@@ -37,13 +60,15 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="10dp"
-
+            android:background="@drawable/sh_text_rad"
             android:entries="@array/Category"
-
+            android:popupBackground="@color/purple_700"
             android:scrollbarStyle="insideInset"
             android:splitMotionEvents="true" />
 
-
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/textprice"
@@ -54,13 +79,26 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
-
+                android:background="@drawable/sh_text_rad"
                 android:ems="10"
                 android:hint="Price"
+                android:inputType="textPassword"
+                android:textColor="@color/white"
+                android:textColorHighlight="@color/highlite"
+                android:textColorHint="@color/white"
+                android:textColorLink="@color/highlite"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                android:textSize="18sp" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/textquantityid"
@@ -71,14 +109,24 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
-
-
+                android:background="@drawable/sh_text_rad"
+                android:ems="10"
                 android:hint="Quantity"
-
-
+                android:textColor="@color/white"
+                android:textColorHighlight="@color/highlite"
+                android:textColorHint="@color/white"
+                android:textColorLink="@color/highlite"
                 android:textSize="18sp"
-                />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/textdate"
@@ -89,19 +137,33 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="8dp"
+                android:background="@drawable/sh_text_rad"
+                android:ems="10"
                 android:hint="Date"
-                 />
+                android:textColor="@color/white"
+                android:textColorHighlight="@color/highlite"
+                android:textColorHint="@color/white"
+                android:textColorLink="@color/highlite"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
             android:id="@+id/addbtnid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:background="@drawable/sh_btn_rad"
             android:text="Add trip"
-            android:textSize="18sp" />
+            android:textColor="@color/background"
+            android:textSize="18sp"
+            app:backgroundTint="@color/highlite" />
 
+    </LinearLayout>
 
-
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
