--- a/app/src/main/res/layout/activity_booked_tickets.xml
+++ b/app/src/main/res/layout/activity_booked_tickets.xml
@@ -38,7 +38,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/travel_img_id"
+                        android:id="@+id/carttravel_img_id"
                         android:layout_width="100dp"
 
                         android:layout_height="100dp"
@@ -46,7 +46,7 @@
                         tools:ignore="VectorDrawableCompat" />
 
                     <TextView
-                        android:id="@+id/fromtextid"
+                        android:id="@+id/cartfromtextid"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
@@ -64,7 +64,7 @@
                         android:textColor="@color/background" />
 
                     <TextView
-                        android:id="@+id/totextid"
+                        android:id="@+id/carttotextid"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
@@ -85,7 +85,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/pricetextid"
+                        android:id="@+id/cartpricetextid"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -94,7 +94,7 @@
                         android:textSize="18sp" />
 
                     <TextView
-                        android:id="@+id/timetextid"
+                        android:id="@+id/carttimetextid"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
