--- a/app/src/main/res/layout/activity_trip_details.xml
+++ b/app/src/main/res/layout/activity_trip_details.xml
@@ -96,7 +96,7 @@
                     android:gravity="center"
                     android:text="Netherlands"
                     android:textColor="@color/highlite"
-                    android:textSize="24sp " />
+                    android:textSize="24sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -188,7 +188,7 @@
                     android:textSize="24sp" />
 
                 <TextView
-                    android:id="@+id/textView27"
+                    android:id="@+id/textavlqtyid"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
