from and to space problem

--- a/app/src/main/res/layout/activity_travil_item.xml
+++ b/app/src/main/res/layout/activity_travil_item.xml
@@ -53,7 +53,7 @@
                     android:id="@+id/textView24"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:text="To"
                     android:textColor="@color/background" />
