cart hasnot finished yet

--- a/app/src/main/res/layout/activity_show_cart_trips.xml
+++ b/app/src/main/res/layout/activity_show_cart_trips.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background">
+    android:background="@color/background"
+    tools:context=".MainActivity">
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -14,8 +15,9 @@
         android:layout_gravity="center"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="56dp"
-        tools:listitem="@layout/activity_booked_tickets"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="5dp"
+        tools:listitem="@layout/activity_booked_tickets" />
 </androidx.constraintlayout.widget.ConstraintLayout>
