--- a/app/src/main/res/layout/activity_add_trip.xml
+++ b/app/src/main/res/layout/activity_add_trip.xml
@@ -7,30 +7,25 @@
     android:background="@color/background"
     tools:context=".SignUp">
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="279dp"
-        android:text="Add Trip"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="50dp"
+        android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5">
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Trip"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
 
         <Spinner
             android:id="@+id/spinner_From"
@@ -44,7 +39,6 @@
             android:splitMotionEvents="true" />
 
 
-
         <Spinner
             android:id="@+id/spinner_To"
             android:layout_width="match_parent"
@@ -55,6 +49,7 @@
             android:popupBackground="@color/purple_700"
             android:scrollbarStyle="insideInset"
             android:splitMotionEvents="true" />
+
         <Spinner
             android:id="@+id/spinner_cat"
             android:layout_width="match_parent"
@@ -148,7 +143,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
