--- a/app/src/main/res/layout/activity_travil_item.xml
+++ b/app/src/main/res/layout/activity_travil_item.xml
@@ -22,7 +22,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <LinearLayout
                 android:id="@+id/linearLayout6"
