--- a/app/src/main/res/layout/activity_show_cart_trips.xml
+++ b/app/src/main/res/layout/activity_show_cart_trips.xml
@@ -129,7 +129,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/submit_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
