--- a/app/src/main/res/layout/show_travils.xml
+++ b/app/src/main/res/layout/show_travils.xml
@@ -11,13 +11,15 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="0dp"
-        android:layout_height="720dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="11dp"
+        android:layout_marginTop="10dp"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.583"
         tools:listitem="@layout/activity_travil_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
